--- a/packages/lit-dev-content/site/css/tutorial.css
+++ b/packages/lit-dev-content/site/css/tutorial.css
@@ -326,3 +326,7 @@ resize-bar[active] {
 #tutorialContent aside.negative::before {
   content: url(/images/alerts/negative.svg);
 }
+
+#tutorialContent details summary {
+  cursor: pointer;
+}
